# explainiverse

./: .gitignore  README.md  pyproject.toml  test_output.txt  test_output_after_fixes.txt  test_output_baseline.txt  warning_summary.txt
.github/workflows/: deploy-demo.yml  js-ci.yml  python-ci.yml
docs/: ROADMAP.md  SOTA_COMPARISON.md
src/explainiverse/: __init__.py
src/explainiverse/adapters/: __init__.py  base_adapter.py  pytorch_adapter.py  sklearn_adapter.py
src/explainiverse/core/: __init__.py  explainer.py  explanation.py  registry.py
src/explainiverse/engine/: __init__.py  suite.py
src/explainiverse/evaluation/: __init__.py  _utils.py  agreement.py  axiomatic.py  complexity.py  fairness.py  faithfulness.py  faithfulness_extended.py  localisation.py  metrics.py  randomisation.py  robustness.py  stability.py
src/explainiverse/explainers/: __init__.py
src/explainiverse/explainers/attribution/: __init__.py  lime_wrapper.py  shap_wrapper.py  treeshap_wrapper.py
src/explainiverse/explainers/counterfactual/: __init__.py  dice_wrapper.py
src/explainiverse/explainers/example_based/: __init__.py  protodash.py
src/explainiverse/explainers/global_explainers/: __init__.py  ale.py  partial_dependence.py  permutation_importance.py  sage.py
src/explainiverse/explainers/gradient/: __init__.py  deeplift.py  gradcam.py  integrated_gradients.py  lrp.py  saliency.py  smoothgrad.py  tcav.py
src/explainiverse/explainers/rule_based/: __init__.py  anchors_wrapper.py
tests/: test_agreement.py  test_all.py  test_axiomatic.py  test_bugfixes_v093.py  test_complexity_metrics.py  test_core_fixes.py  test_deeplift.py  test_evaluation_metrics.py  test_explainer_registry.py  test_explanation_suite.py  test_fairness.py  test_faithfulness_estimate.py  test_faithfulness_metrics.py  test_gradcam.py  test_infidelity.py  test_insertion_deletion.py  test_integrated_gradients.py  test_irof.py  test_lime_explainer.py  test_localisation.py  test_lrp.py  test_monotonicity.py  test_monotonicity_nguyen.py  test_new_explainers.py  test_pixel_flipping.py  test_prediction_change_bug.py  test_protodash.py  test_pytorch_adapter.py  test_randomisation.py  test_region_perturbation.py  test_relative_stability.py  test_road.py  test_robustness_metrics.py  test_saliency.py  test_selectivity.py  test_sensitivity_n.py  test_shap_explainer.py  test_sklearn_adapter.py  test_smoothgrad.py  test_stability_metrics.py  (+2 more)
