[tool.poetry]
name = "explainiverse"
version = "0.1.0"
description = "Unified Explainability Framework"
authors = ["Muntaser Syed <jemsbhai@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "explainiverse", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.24.4"
lime = "^0.2.0.1"
scikit-learn = ">=1.1,<1.4"
shap = "^0.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
