[tool.poetry]
name = "explainiverse"
version = "0.7.0"
description = "Unified, extensible explainability framework supporting LIME, SHAP, Anchors, Counterfactuals, PDP, ALE, SAGE, and more"
authors = ["Muntaser Syed <jemsbhai@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jemsbhai/explainiverse"
homepage = "https://github.com/jemsbhai/explainiverse"
packages = [{ include = "explainiverse", from = "src" }]
keywords = ["xai", "explainability", "interpretability", "machine-learning", "lime", "shap", "anchors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24,<2.0"
lime = "^0.2.0.1"
scikit-learn = ">=1.1,<1.6"
shap = "^0.48.0"
pandas = ">=1.5,<3.0"
scipy = ">=1.10,<2.0"
xgboost = ">=1.7,<3.0"
torch = { version = ">=2.0", optional = true }

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
black = "^24.0"
isort = "^5.13"
mypy = "^1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Bug Tracker" = "https://github.com/jemsbhai/explainiverse/issues"
"Documentation" = "https://github.com/jemsbhai/explainiverse#readme"
