[project]
name = "explainiverse"
version = "0.12.0"
description = "Unified, extensible explainability framework supporting 18 XAI methods including LIME, SHAP, LRP, TCAV, GradCAM, and more"
authors = [
    { name = "Muntaser Syed", email = "jemsbhai@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["xai", "explainability", "interpretability", "machine-learning", "lime", "shap", "anchors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "lime>=0.2.0.1,<1.0",
    "scikit-learn>=1.6,<2.0",
    "shap>=0.46,<1.0",
    "pandas>=1.5,<3.0",
    "scipy>=1.10,<3.0",
    "xgboost>=1.7,<4.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
image = ["scikit-image>=0.20"]
all = ["torch>=2.0", "scikit-image>=0.20"]

[project.urls]
Homepage = "https://github.com/jemsbhai/explainiverse"
Repository = "https://github.com/jemsbhai/explainiverse"

[tool.poetry]
packages = [{ include = "explainiverse", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = ">=4.1"
black = "^24.0"
isort = "^5.13"
mypy = "^1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = []

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
